Add customer profile improve admin features

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>BanglaBook - Your Online Bookstore</title>
+        <title>BookMarket - Your Online Bookstore</title>
         <link rel="stylesheet" href="css/styles.css" />
         <!-- Font Awesome for icons -->
         <link
@@ -21,7 +21,6 @@
         <section class="hero">
             <div class="hero-container">
                 <div class="hero-content">
-                    <div class="bangla-brand">BanglaBook</div>
                     <h1>Discover, Buy and Sell Books Online</h1>
                     <p>
                         Find your next favorite book or sell the ones you've
@@ -40,7 +39,7 @@
                     <!-- Hero image placeholder -->
                     <img
                         src="images/sale.png"
-                        alt="BanglaBook Hero Image"
+                        alt="BookMarket Hero Image"
                         class="hero-placeholder"
                     />
                 </div>
@@ -272,7 +271,7 @@
                             </div>
                         </div>
                         <p class="review-text">
-                            "BanglaBook helped me save so much money on
+                            "BookMarket helped me save so much money on
                             textbooks! I found all my required books at half the
                             price. The quality was excellent and delivery was
                             super fast."
@@ -300,7 +299,7 @@
                         </div>
                         <p class="review-text">
                             "As a teacher, I love finding rare educational books
-                            on BanglaBook. The platform is easy to use and I've
+                            on BookMarket. The platform is easy to use and I've
                             built an amazing collection of reference materials
                             for my students."
                         </p>
@@ -314,7 +313,7 @@
             <div class="footer-container">
                 <div class="footer-top">
                     <div class="footer-column">
-                        <h3>BanglaBook</h3>
+                        <h3>BookMarket</h3>
                         <p>
                             Your one-stop destination for buying and selling
                             books online. Find your next favorite book or give
@@ -361,13 +360,13 @@
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                support@banglabook.com
+                                support@bookmarket.com
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <p>&copy; 2023 BanglaBook. All Rights Reserved.</p>
+                    <p>&copy; 2023 BookMarket. All Rights Reserved.</p>
                 </div>
             </div>
         </footer>
