--- a/pages/admin/book-management.html
+++ b/pages/admin/book-management.html
@@ -349,14 +349,11 @@
                 <ul class="navbar-menu">
                     <li><a href="../../index.html">Home</a></li>
                     <li>
-                        <a href="order-management.html">Order Management</a>
-                    </li>
-                    <li>
-                        <a href="book-management.html" class="active"
-                            >Book Management</a
+                        <a href="order-management.html" class="active"
+                            >Management</a
                         >
                     </li>
-                    <li><a href="user-management.html">User Management</a></li>
+                    <li><a href="book-upload.html">Book Upload</a></li>
                     <li><a href="book-approval.html">Book Approval</a></li>
                 </ul>
                 <div class="navbar-buttons">
@@ -381,20 +378,10 @@
 
         <!-- Dashboard Content -->
         <div class="dashboard-container">
-            <div class="dashboard-header">
-                <div class="welcome-message">
-                    <h1>Book Management</h1>
-                    <p>Manage approved books in the BookMarket platform</p>
-                </div>
-            </div>
-
             <div class="dashboard-layout">
-                <!-- Dashboard Sidebar -->
+                <!-- Dashboard Sidebar (Management only) -->
                 <div class="dashboard-sidebar">
                     <div class="sidebar-menu">
-                        <a href="dashboard.html" class="sidebar-menu-item">
-                            <i class="fas fa-chart-line"></i> Dashboard
-                        </a>
                         <a
                             href="order-management.html"
                             class="sidebar-menu-item"
@@ -413,20 +400,6 @@
                         >
                             <i class="fas fa-users"></i> User Management
                         </a>
-                        <a href="book-approval.html" class="sidebar-menu-item">
-                            <i class="fas fa-check-circle"></i> Book Approval
-                        </a>
-                        <a href="book-upload.html" class="sidebar-menu-item">
-                            <i class="fas fa-upload"></i> Book Upload
-                        </a>
-
-                        <a
-                            href="#"
-                            class="sidebar-menu-item"
-                            id="sidebar-logout"
-                        >
-                            <i class="fas fa-sign-out-alt"></i> Logout
-                        </a>
                     </div>
                 </div>
 
@@ -434,21 +407,7 @@
                 <div class="dashboard-content">
                     <div class="section-card">
                         <div class="section-header">
-                            <div
-                                style="
-                                    display: flex;
-                                    justify-content: space-between;
-                                    align-items: center;
-                                "
-                            >
-                                <h3 class="section-title">Book Management</h3>
-                                <a
-                                    href="book-upload.html"
-                                    class="btn btn-success"
-                                >
-                                    <i class="fas fa-plus"></i> Add New Book
-                                </a>
-                            </div>
+                            <h3 class="section-title">Book Management</h3>
                         </div>
 
                         <div class="section-content">
