--- a/pages/admin/book-upload.html
+++ b/pages/admin/book-upload.html
@@ -348,51 +348,8 @@
             </div>
 
             <div class="upload-layout">
-                <!-- Upload Sidebar -->
-                <div class="upload-sidebar">
-                    <div class="sidebar-menu">
-                        <a href="dashboard.html" class="sidebar-menu-item">
-                            <i class="fas fa-chart-line"></i> Dashboard
-                        </a>
-                        <a
-                            href="order-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-shopping-bag"></i> Order Management
-                        </a>
-                        <a
-                            href="book-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-book"></i> Book Management
-                        </a>
-                        <a
-                            href="user-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-users"></i> User Management
-                        </a>
-                        <a href="book-approval.html" class="sidebar-menu-item">
-                            <i class="fas fa-check-circle"></i> Book Approval
-                        </a>
-                        <a
-                            href="book-upload.html"
-                            class="sidebar-menu-item active"
-                        >
-                            <i class="fas fa-upload"></i> Book Upload
-                        </a>
-                        <a
-                            href="#"
-                            class="sidebar-menu-item"
-                            id="sidebar-logout"
-                        >
-                            <i class="fas fa-sign-out-alt"></i> Logout
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Upload Main Content -->
-                <div class="upload-content">
+                <!-- Upload Main Content (no sidebar for this page) -->
+                <div class="upload-content" style="width: 100%">
                     <!-- Alert Messages -->
                     <div id="alert-success" class="alert alert-success"></div>
                     <div id="alert-error" class="alert alert-error"></div>
@@ -478,6 +435,22 @@
                                         name="price"
                                         min="0"
                                         step="0.01"
+                                        required
+                                    />
+                                </div>
+                                <div class="form-group">
+                                    <label
+                                        for="stock_quantity"
+                                        class="required-field"
+                                        >Stock Quantity</label
+                                    >
+                                    <input
+                                        type="number"
+                                        id="stock_quantity"
+                                        name="stock_quantity"
+                                        min="1"
+                                        step="1"
+                                        value="1"
                                         required
                                     />
                                 </div>
