--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -363,50 +363,7 @@
             </div>
 
             <div class="dashboard-layout">
-                <!-- Dashboard Sidebar -->
-                <div class="dashboard-sidebar">
-                    <div class="sidebar-menu">
-                        <a
-                            href="dashboard.html"
-                            class="sidebar-menu-item active"
-                        >
-                            <i class="fas fa-chart-line"></i> Dashboard
-                        </a>
-                        <a
-                            href="order-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-shopping-bag"></i> Order Management
-                        </a>
-                        <a
-                            href="book-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-book"></i> Book Management
-                        </a>
-                        <a
-                            href="user-management.html"
-                            class="sidebar-menu-item"
-                        >
-                            <i class="fas fa-users"></i> User Management
-                        </a>
-
-                        <a href="book-upload.html" class="sidebar-menu-item">
-                            <i class="fas fa-upload"></i> Book Upload
-                        </a>
-
-                        <a
-                            href="#"
-                            class="sidebar-menu-item"
-                            id="sidebar-logout"
-                        >
-                            <i class="fas fa-sign-out-alt"></i> Logout
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Dashboard Main Content -->
-                <div class="dashboard-content">
+                <div class="dashboard-content" style="width: 100%">
                     <!-- Stats Overview -->
                     <div class="stats-cards">
                         <div class="stat-card stat-books">
